password hashing and verification

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,9 +3,20 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="/stylesheets/style.css" />
 		<title>Document</title>
 	</head>
 	<body>
-		<h1>Home Page</h1>
+		<section class="home-section">
+			<h1 class="home-heading">Home Page</h1>
+			<form action="/routes/users">
+				<a href="/users/signup">
+					<input class="home-input" type="text" value="Click To Sign Up" />
+				</a>
+				<a href="/users/login">
+					<input class="home-input" type="text" value="Click To Login" />
+				</a>
+			</form>
+		</section>
 	</body>
 </html>
