--- a/views/loginForm.ejs
+++ b/views/loginForm.ejs
@@ -9,16 +9,10 @@
 	<body>
 		<div class="login-page">
 			<div class="form">
-				<form class="register-form">
-					<input type="text" placeholder="name" />
-					<input type="password" placeholder="password" />
-					<input type="text" placeholder="email address" />
-					<button>create</button>
-					<p class="message">Already registered? <a href="#">Sign In</a></p>
-				</form>
-				<form class="login-form">
-					<input type="text" placeholder="username" />
-					<input type="password" placeholder="password" />
+				<form class="login-form" action="/users/login" method="POST">
+					<input type="email" placeholder="Email" />
+					<input type="password" placeholder="Password" />
+					<!-- <input type="submit" placeholder="Login" /> -->
 					<button>login</button>
 					<p class="message">
 						Not registered? <a href="/users/signup">Create an account</a>
