--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -244,7 +244,7 @@ input[type="password"] {
 	width: 94.5%;
 	display: block;
 	border: none;
-	padding: 0.8em;
+	padding: .8em;
 	border: solid 1px rgba(255, 255, 255, 0.37);
 	-webkit-transition: all 0.3s cubic-bezier(0.64, 0.09, 0.08, 1);
 	transition: all 0.3s cubic-bezier(0.64, 0.09, 0.08, 1);
@@ -966,4 +966,19 @@ input.checkbox:checked:after {
 
 .login-form input {
 	color: black;
+}
+.home-section {
+	margin: 0 auto;
+}
+.home-heading {
+	margin: 70px;
+	text-align: center;
+}
+.home-input {
+	cursor: pointer;
+	margin-top: 30px;
+	margin-left: auto;
+	margin-right: auto;
+	max-width: 300px;
+	text-align: center;
 }
