--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Creative Colorlib SignUp Form</title>
+		<title>SignUp Form</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<link href="/stylesheets/style.css" rel="stylesheet" />
+		<link rel="stylesheet" href="/stylesheets/style.css" />
 		<link
 			href="//fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,700,700i"
 			rel="stylesheet"
@@ -18,43 +18,27 @@
 			<h1>SignUp For NodeJS</h1>
 			<div class="main-agileinfo">
 				<div class="agileits-top">
-					<form action="#" method="post">
-						<input
-							class="text"
-							type="text"
-							name="Username"
-							placeholder="Username"
-							required=""
-						/>
+					<form action="/users/signup" method="POST">
+						<h2>Name</h2>
+						<input class="text" type="text" name="name" placeholder="Name" />
+						<h2>Email</h2>
 						<input
 							class="text email"
 							type="email"
 							name="email"
 							placeholder="Email"
-							required=""
 						/>
+						<h2>Password</h2>
 						<input
 							class="text"
 							type="password"
 							name="password"
 							placeholder="Password"
-							required=""
-						/>
-						<input
-							class="text w3lpass"
-							type="password"
-							name="password"
-							placeholder="Confirm Password"
-							required=""
 						/>
 						<div class="wthree-text">
-							<label class="anim">
-								<input type="checkbox" class="checkbox" required="" />
-								<span>I Agree To The Terms & Conditions</span>
-							</label>
 							<div class="clear"></div>
 						</div>
-						<input type="submit" value="SIGNUP" />
+						<input type="submit" value="SIGN UP" />
 					</form>
 					<p>Don't have an Account? <a href="/users/login"> Login Now!</a></p>
 				</div>
