--- a/views/loginForm.ejs
+++ b/views/loginForm.ejs
@@ -10,10 +10,10 @@
 		<div class="login-page">
 			<div class="form">
 				<form class="login-form" action="/users/login" method="POST">
-					<input type="email" placeholder="Email" />
-					<input type="password" placeholder="Password" />
-					<!-- <input type="submit" placeholder="Login" /> -->
-					<button>login</button>
+					<input type="email" name="email" placeholder="Email" />
+					<input type="password" name="password" placeholder="Password" />
+					<input type="submit" value="Login" />
+
 					<p class="message">
 						Not registered? <a href="/users/signup">Create an account</a>
 					</p>
